samples/_failures_safe/1761077871_35ad0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dafea50.c: In function ‘main’:
./samples/SAFE/__tmp_9dafea50.c:170:12: error: missing terminating " character
  170 |     printf("Short
      |            ^~~~~~
./samples/SAFE/__tmp_9dafea50.c:170:5: error: expected expression at end of input
  170 |     printf("Short
      |     ^~~~~~
./samples/SAFE/__tmp_9dafea50.c:170:5: error: expected declaration or statement at end of input
